fixes p overflow

--- a/stylesheets/resultContainer.css
+++ b/stylesheets/resultContainer.css
@@ -40,6 +40,7 @@
     flex-basis: auto;
     min-width: 0;
     flex-shrink: 2;
+    overflow-wrap: break-word;
 }
 
 .js-resultCard h4 {
