--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -84,7 +84,6 @@ footer {
     align-items: center;
     width: 100%;
     padding-top: 250px;
-    padding-bottom: 35px;
     height: 100px;
 }
 .footerContainer {
